splash.css
@font-face {
    font-family: 'Caslon Doric';
    src: url('./SK_Fonts/CaslonDoric-Regular.woff2') format('woff2'),
        url('./SK_Fonts/CaslonDoric-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
  }

  * {box-sizing:border-box}

body {
  overflow: hidden;
}

header {
    position: fixed; /* Make it stick/fixed */
    top: 0px; /* Stay on top */
    width: 100%; /* Full width */
    z-index: 2;
    padding: 30px
}

header nav {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    align-items: center;
}

header nav div img{
    width: 250px;
    position: relative;
    z-index: 0;
  }

header nav div a img {
  width: 30px;
  padding: 4px;
}  

header nav div:last-of-type {
  display: flex;
  align-items: center;
}

header nav div:first-of-type {
  width: 62px;
}

header .menu-btn {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0, 0.9);
  overflow-x: hidden;
  transition: 0.5s;
}

header .menu-content {
  background-color: rgba(28, 32, 63, 0.5);
  background-repeat: no-repeat;
  background-size: cover;
  font-family: 'Caslon Doric';
  font-weight: normal;
  width: 100%;
  height: 100vh;
  padding: 0 10%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  position: absolute;
  z-index: 1;
  color: white;
  letter-spacing: 0.5px;
}

header .menu-content div:first-of-type {
  width: 300px;
}

header .menu-content h2 {
  font-weight: normal;
  font-size: 20px;
  margin: 60px 0;
  text-align: center;
  letter-spacing: 2px;
}

header .menu-content p {
  font-weight: normal;
  text-align: center;
  font-size: 20px;
  margin: 0;
  line-height: 28px;
  letter-spacing: 0.5px;
}

header .menu-content div:last-of-type {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
} 

header .menu-content div:last-of-type img {
width: 40px;
padding: 6px;
}

header .menu-btn a {
  text-decoration: none;
  font-size: 36px;
  color: #ffffff;
  display: block;
  transition: 0.3s;
}

header .menu-btn a:hover, .menu-btn a:focus {
  color: #f1f1f1;
}

header .menu-btn .closebtn img {
  position: absolute;
  top: 30px;
  left: 30px;
  width: 30px;
  z-index: 11;
}

section {
  min-height: 100vh;
  position:relative;
  overflow: hidden;
  width: 100vw;
}

section h1 {
  position: absolute;
  font-family: 'Caslon Doric';
  font-weight: normal;
  font-size: 20px;
  text-align: center;
  letter-spacing: 2px;
  color: #FFFFFF;
  text-shadow: 0px 2px 6px #00000029;
  text-transform: uppercase;
  opacity: 1;
  bottom: 30px;
  margin-left: auto;
  margin-right: auto;
  display: block;
  z-index: 1;
  width: 100%;
  padding: 0 30px;
  line-height: 1.2;
}

/* Slideshow container */
.slideshow-container {
  position: absolute;
  margin: auto;
  width: 100%;
}

/* Hide the images by default */
.mySlides {
  display: none;
  width: 100%;
}

.mySlides img{
  object-fit: cover;
  object-position: 50% 50%;
  width: 100vw;
    height: 100vh;
}
  
/* Fading animation */
.fade {
  -webkit-transition: opacity 300ms ease-out;
-o-transition: opacity 300ms ease-out;
transition: opacity 300ms ease-out;
  /* -webkit-animation-name: fade;
  -webkit-animation-duration: 300ms;
  animation-name: fade;
  animation-timing-function: ease-out;
  animation-duration: 300ms;
  background-color: rgb(0,0,0); */
}
  
/* @-webkit-keyframes fade {
  from {opacity: .2}
  to {opacity: 1}
}
  
@keyframes fade {
  from {opacity: .2}
  to {opacity: 1}
} */ 

/* Media Queries */

@media only screen and (max-width: 600px)  {

  header .menu-content div:first-of-type {
    width: 250px;
  }

  header nav div:last-of-type img{
    display: none;
  }

  header nav div:last-of-type {
    width: 62px;
  }

  h1 {
    margin-bottom: 20px;
  }

  header .menu-content h2 {
    margin: 60px 0;
    font-size: 22px;
  }

  header .menu-content p {
    font-size: 18px;
    line-height: 21px;
  }

  header .menu-content div:last-of-type {
    margin-top: 10px;
  } 

}

